# claude-code-safety-net

./: .gitignore  .ignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CUSTOM_RULES_REFERENCE.md  LICENSE  README.md  bunfig.toml  justfile  package.json  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/: pull_request_template.md
.github/workflows/: ci.yml  publish.yml
.opencode/command/: set-custom-rules.md  verify-custom-rules.md
commands/: set-custom-rules.md  verify-custom-rules.md
hooks/: hooks.json
scripts/: generate-changelog.ts  verify_config.py
scripts/safety_net_impl/: config.py  hook.py  rules_custom.py  rules_git.py  shell.py
src/: types.ts
src/core/: shell.ts  verify-config.ts
tests/: __init__.py  cli-wrapper.test.ts  edge-cases.test.ts  env.test.ts  format.test.ts  gemini-hook.test.ts  parsing-helpers.test.ts  rules-git.test.ts  safety_net_test_base.py  test_config.py  test_custom_rules_integration.py  test_rules_custom.py  test_safety_net_audit.py  test_safety_net_edge.py  test_safety_net_find.py  test_safety_net_parsing_helpers.py  test_safety_net_rm.py  test_verify_config.py  verify-config.test.ts
