[project]
name = "safety-net"
version = "0.3.2"
description = "Block destructive git and filesystem commands in Claude Code"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["scripts"]

[tool.ruff]
# Target Python 3.10 as determined by code analysis
target-version = "py310"
line-length = 88
indent-width = 4

[tool.ruff.lint]
# E: pycodestyle errors
# F: Pyflakes
# I: isort (import sorting)
# B: flake8-bugbear (common logical bugs)
# UP: pyupgrade (upgrade syntax to newer python versions)
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --cov=scripts --cov-report=term-missing"

[tool.coverage.run]
branch = true
source = ["scripts"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
show_missing = true
fail_under = 90

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.9",
    "pre-commit>=4.0.0",
    "mypy>=1.19.1",
    "vulture>=2.14",
    "commitizen>=4.10.1",
    "pytest-cov>=7.0.0",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.vulture]
min_confidence = 80
paths = ["."]
exclude = [".venv", "venv"]


[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
annotated_tag = true
version_scheme = "pep440"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true
version_files = [
    "pyproject.toml:version",
    ".claude-plugin/plugin.json:version",
]
